--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
 
     <body>
-
+        <div class="images" >
+            <button type="button" class="btn prevBtn">Previous</button>
+            <button type="button" class="btn nextBtn">Next</button>
+        </div>
         
     </body>
 
